# CudaViaCmake

./: CMakeLists.txt  README.md
Demo_BuildMultipleTargets/: CMakeLists.txt  README.md
Demo_BuildMultipleTargets/src/: main2.cpp
Demo_BuildSingleExecutable/: CMakeLists.txt
Demo_BuildSingleExecutable/cufiles/: device.cu
Demo_BuildSingleExecutable/src/: main.cpp
Demo_cuDNN/: CMakeLists.txt  README.md  build_script.cmd  cuDNN.cmake
Demo_cuDNN/cufiles/: device.cu
Demo_cuDNN/src/: main.cpp
Demo_cuDNN_multistream/: CMakeLists.txt  Profile_MultiStream.nvvp  README.md
Demo_cuDNN_multistream/cufiles/: device.cu
Demo_cuDNN_multistream/src/: main.cpp
Demo_streams/: CMakeLists.txt
Demo_streams/cufiles/: device.cu
Demo_streams/src/: main.cpp
src/: .main.cpp.swp  main.cpp
